style: fix menu letter spacing to 0.1em

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav ul li a {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 13px;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
     transition: 0.3s;
 }
 
